Úprava NotFoundException
Uprava návratové hodnoty metody z Advice vracející chybovou zprávu